--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.6.7",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.7.1",
-        "lodash": "^4.17.21",
-        "owl.carousel": "^2.3.4",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "react-image-magnify": "^2.1.1",
-        "react-loader-spinner": "^6.1.6",
-        "react-owl-carousel": "^2.3.3",
-        "react-router-dom": "6.21.3",
-        "react-scripts": "^5.0.1",
-        "react-slick": "0.30.1",
-        "react-toastify": "^10.0.4",
-        "react-transition-group": "^4.4.5",
-        "react-use-cart": "^1.13.0",
-        "react-zoom-pan-pinch": "^3.4.2",
-        "web-vitals": "^2.1.4"
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
+    "owl.carousel": "^2.3.4",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-image-magnify": "^2.1.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "6.21.3",
+    "react-scripts": "^5.0.1",
+    "react-slick": "0.30.1",
+    "react-toastify": "^10.0.4",
+    "react-transition-group": "^4.4.5",
+    "react-use-cart": "^1.13.0",
+    "react-zoom-pan-pinch": "^3.4.2",
+    "recharts": "^2.12.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
