--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "owl.carousel": "^2.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-fontawesome": "^1.7.1",
     "react-image-magnify": "^2.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-owl-carousel": "^2.3.3",
