--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +23,8 @@
     "react-image-magnify": "^2.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-owl-carousel": "^2.3.3",
+    "react-quill": "^2.0.0",
+    "react-quill-image-uploader": "^0.1.1",
     "react-router-dom": "6.21.3",
     "react-scripts": "^5.0.1",
     "react-slick": "0.30.1",
