--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "6.21.3",
     "react-scripts": "^5.0.1",
     "react-slick": "0.30.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "react-transition-group": "^4.4.5",
     "react-use-cart": "^1.13.0",
